examples/traefik_with_officer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: officer-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8085"
    spec:
      containers:
      - args:
        - --configFile=/config/traefik.toml
        image: traefik:v2.2.1
        imagePullPolicy: IfNotPresent
        name: traefik
        ports:
        - containerPort: 8083
          name: metrics
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8082
          name: ping
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /logs
          name: access-logs
      - name: traefik-officer
        image: goyface/traefik-officer:v1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: officer-metrics
        args:
        # Location of the accessLog in the container.
        - --log-file=/logs/accessLog.txt
        # Metrics port
        - --listen-port=8084
        # Config file, see configmap
        - --config-file=/config/traefik_officer.json
        # Maximum size, in MB of the accessLog
        - --max-accesslog-size=50
        # The duration, in ms, above which a whitelisted request path will have its access log lines passed through to stdout
        - --pass-log-above-threshold=1000
        # Strict whitelist - ONLY paths matching the whitelist will have metrics taken on them.
        # If false, used to bypass ignore rules and also a requirment to having high latency log lines passed through to stdout.
        - --strict-whitelist=true
        volumeMounts:
          - mountPath: /logs
            name: access-logs
          - mountPath: /config
            name: officer-config
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      - name: exporter-merger
        image: quay.io/rebuy/exporter-merger:v0.2.0
        ports:
        - containerPort: 8084
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      terminationGracePeriodSeconds: 30
      volumes:
      - name: access-logs
        emptyDir: {}
      - name: officer-config
        configMap:
            defaultMode: 420
            name: traefik-officer-config
      - configMap:
          defaultMode: 420
          name: traefik-config
        name: config-volume
      - configMap:
          defaultMode: 420
          name: traefik-dyn
        name: traefik-dyn
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: officer-test
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: officer-test
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`your.example.com`)
    kind: Rule
    services:
    - name: whoami
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: officer-test
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
